Changing metrics API call and related files
