# swagger_server/controllers/metrics_controller.py
@@ -1,7 +1,6 @@
 from swagger_server.models.metric_res import MetricRes  # noqa: E501
 from swagger_server import util
 
-from conf.conf import config
 from clients.elastic_client import ElasticClient
 
 
@@ -36,14 +35,14 @@ BASE_QUERY = {
 }
 
 
-def getmetrics(infraId, operationID, name, startTime, endTime):  # noqa: E501
+def getmetrics(vdcId, operationID, name, startTime, endTime, blueprintId=None):  # noqa: E501
 
     """getmetrics
 
     Get metric value based on meter operation id, name, timestamp # noqa: E501
 
-    :param infraId: The infrastructure name based on the blueprint
-    :type infraId: str
+    :param vdcId: The VDC id
+    :type vdcId: str
     :param operationID: Operation id based on deployment blueprint
     :type operationID: str
     :param name: Name of meter
@@ -52,16 +51,20 @@ def getmetrics(infraId, operationID, name, startTime, endTime):  # noqa: E501
     :type startTime: str
     :param endTime: End timestamp of meter
     :type endTime: str
+    :param blueprintId: Blueprint id
+    :type blueprintId: str
+
 
     :rtype: MetricRes
     """
 
-    if infraId not in config['infra_names']:
-        return 'Infrastructure Id not found in Blueprint', 404
-
     startTime = util.deserialize_datetime(startTime)
     endTime = util.deserialize_datetime(endTime)
-    index_name = '{}-*'.format(infraId)
+    if not blueprintId:
+        index_name = '{}-*'.format(vdcId)
+    else:
+        index_name = '{}-{}'.format(blueprintId, vdcId)
+
     BASE_QUERY['query']['bool']['must'][1]['match']['meter.name'] = name
     BASE_QUERY['query']['bool']['must'][2]['match']['meter.operationID'] = operationID
     BASE_QUERY['query']['bool']['must'][3]['range']['meter.timestamp']['gte'] = startTime
